[gd_scene load_steps=33 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/idle_right.png" type="Texture" id=2]
[ext_resource path="res://Assets/moving_right.png" type="Texture" id=3]
[ext_resource path="res://Scripts/CharacterSprite.gd" type="Script" id=4]
[ext_resource path="res://Assets/updash.png" type="Texture" id=5]
[ext_resource path="res://Assets/idle_left.png" type="Texture" id=6]
[ext_resource path="res://Assets/moving_left.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 80 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 80 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 80 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 80 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 80 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "Left Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "Left Move",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Right Move",
"speed": 4.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 4.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": false,
"name": "Jump",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 16, 24 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
animation = "Left Idle"
playing = true
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 12 )

[node name="Timer" type="Timer" parent="."]
[connection signal="Jump" from="." to="AnimatedSprite" method="_on_Player_Jump"]
[connection signal="Left" from="." to="AnimatedSprite" method="_on_Player_Left"]
[connection signal="Right" from="." to="AnimatedSprite" method="_on_Player_Right"]
[connection signal="Stop" from="." to="AnimatedSprite" method="_on_Player_Stop"]
[connection signal="animation_finished" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_animation_finished"]
